--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mongoose": "^5.8.6",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
